--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "dependencies": {
+    "markdown-link-extractor": "^1.3.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
+  }
 }
